tests/sksl/errors/BinaryTypeMismatch.glsl
### Compilation failed:

error: 1: type mismatch: '*' cannot operate on 'int', 'bool'
error: 2: type mismatch: '||' cannot operate on 'int', 'float'
error: 3: type mismatch: '==' cannot operate on 'float2', 'int'
error: 4: type mismatch: '!=' cannot operate on 'float2', 'int'
error: 5: type mismatch: '^^' cannot operate on 'int', 'int'
error: 7: type mismatch: '<' cannot operate on 'float2', 'float2'
error: 8: type mismatch: '<' cannot operate on 'float2', 'float'
error: 9: type mismatch: '<' cannot operate on 'float', 'float2'
8 errors
